--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         </intent>
     </queries>
    <application
-        android:label="allen"
+        android:label="My AI"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
