--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -13,7 +13,7 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>allen</string>
+	<string>My AI</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
@@ -53,5 +53,6 @@
 	<string>Main</string>
 	<key>NSSpeechSynthesizerUsageDescription</key>
 	<string>Main</string>
+
 </dict>
 </plist>
